fix: corrected bg alignment

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -25,3 +25,8 @@ body {
 .service-stick-mode{
   margin-top: 70px;
  }
+
+.background {
+  position: relative;
+  width: 0px;
+}
