--- a/src/app/background/background.component.scss
+++ b/src/app/background/background.component.scss
@@ -52,14 +52,29 @@
   object-position: 0% 0%;
 }
 
-.canvas-style{
+.left-bg{
   background-color: black;
   position:fixed; 
   top:0;
   left:0; 
   z-index:-1;
+  width: 50vw;
+  max-width: 60%;
+  height:100%;
+  z-index: -3;
+}
+
+.canvas-align{
+  background-color: green;
+  position:fixed; 
+  top:0;
+  left: 50vw; 
+  z-index:-1;
   width: 100vw;
   max-width: 100%;
   height:100vh;
   z-index: -3;
+}
+
+.canvas {
 }
